Finished first draft of HTML5 Denver Presentation. Added Bootstrap 3, SMACSS and 1 Year Later sections.

--- a/theme/css/default.css
+++ b/theme/css/default.css
@@ -1541,6 +1541,16 @@ img.picture.right {
     margin-top: 30px;
 }
 
+.list-numbered {
+    list-style: decimal;
+    margin-top: 20px;
+}
+
+.list-numbered li {
+    margin-left: 60px;
+    margin-top: 10px;
+}
+
 .results {
     text-align: center;
     color: green;
